--- a/WpfApp1/ExcelCombinator.csproj
+++ b/WpfApp1/ExcelCombinator.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FD6811DB-39D4-4571-98B5-29026D37DEE5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WpfApp1</RootNamespace>
-    <AssemblyName>WpfApp1</AssemblyName>
+    <RootNamespace>ExcelCombinator</RootNamespace>
+    <AssemblyName>ExcelCombinator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,6 +48,9 @@
     </Reference>
     <Reference Include="EPPlus, Version=4.5.3.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\packages\EPPlus.4.5.3\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPlus.Extensions, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.Extensions.2.0.1\lib\net45\EPPlus.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro, Version=1.6.5.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.6.5\lib\net46\MahApps.Metro.dll</HintPath>
@@ -101,8 +104,19 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controls\BusyIndicator.cs" />
-    <Compile Include="Interfaces\IExcelViewer.cs" />
-    <Compile Include="Interfaces\IShell.cs" />
+    <Compile Include="CoreHelpers\BusyMessage.cs" />
+    <Compile Include="Models\Core\ColumnRelations.cs" />
+    <Compile Include="Models\Core\Parser.cs" />
+    <Compile Include="Models\Core\DestinyParser.cs" />
+    <Compile Include="Models\Core\Key.cs" />
+    <Compile Include="Models\Core\OriginParser.cs" />
+    <Compile Include="Models\Interfaces\Ikey.cs" />
+    <Compile Include="Models\Interfaces\IDestinyParser.cs" />
+    <Compile Include="Models\Interfaces\IOriginParser.cs" />
+    <Compile Include="Models\Interfaces\IParser.cs" />
+    <Compile Include="Models\Interfaces\IRelation.cs" />
+    <Compile Include="Models\Interfaces\IExcelViewer.cs" />
+    <Compile Include="Models\Interfaces\IShell.cs" />
     <Compile Include="ViewModels\ExcelViewerViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="App.xaml.cs">
@@ -144,11 +158,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Dictionaries\ControlsDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dictionaries\DefaultStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
