--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -4,6 +4,7 @@
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3" targetFramework="net461" />
+  <package id="EPPlus.Extensions" version="2.0.1" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
