Implementación del motor

--- a/WpfApp1/ExcelCombinator.csproj
+++ b/WpfApp1/ExcelCombinator.csproj
@@ -84,20 +84,20 @@
     </ApplicationDefinition>
     <Compile Include="Controls\BusyIndicator.cs" />
     <Compile Include="CoreHelpers\BusyMessage.cs" />
-    <Compile Include="Models\Core\ColumnRelations.cs" />
-    <Compile Include="Models\Core\ParserMotor.cs" />
-    <Compile Include="Models\Core\Parser.cs" />
-    <Compile Include="Models\Core\DestinyParser.cs" />
-    <Compile Include="Models\Core\Key.cs" />
-    <Compile Include="Models\Core\OriginParser.cs" />
-    <Compile Include="Models\Interfaces\IParseMotor.cs" />
-    <Compile Include="Models\Interfaces\Ikey.cs" />
-    <Compile Include="Models\Interfaces\IDestinyParser.cs" />
-    <Compile Include="Models\Interfaces\IOriginParser.cs" />
-    <Compile Include="Models\Interfaces\IParser.cs" />
-    <Compile Include="Models\Interfaces\IRelation.cs" />
-    <Compile Include="Models\Interfaces\IExcelViewer.cs" />
-    <Compile Include="Models\Interfaces\IShell.cs" />
+    <Compile Include="Core\ColumnRelations.cs" />
+    <Compile Include="Core\ParserMotor.cs" />
+    <Compile Include="Core\Parser.cs" />
+    <Compile Include="Core\DestinyParser.cs" />
+    <Compile Include="Core\Key.cs" />
+    <Compile Include="Core\OriginParser.cs" />
+    <Compile Include="Interfaces\IParseMotor.cs" />
+    <Compile Include="Interfaces\Ikey.cs" />
+    <Compile Include="Interfaces\IDestinyParser.cs" />
+    <Compile Include="Interfaces\IOriginParser.cs" />
+    <Compile Include="Interfaces\IParser.cs" />
+    <Compile Include="Interfaces\IRelation.cs" />
+    <Compile Include="Interfaces\IExcelViewer.cs" />
+    <Compile Include="Interfaces\IShell.cs" />
     <Compile Include="ViewModels\ExcelViewerViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="App.xaml.cs">
