--- a/WpfApp1/ExcelCombinator.csproj
+++ b/WpfApp1/ExcelCombinator.csproj
@@ -84,6 +84,7 @@
     </ApplicationDefinition>
     <Compile Include="Controls\BusyIndicator.cs" />
     <Compile Include="CoreHelpers\BusyMessage.cs" />
+    <Compile Include="CoreHelpers\Constants.cs" />
     <Compile Include="Core\ColumnRelations.cs" />
     <Compile Include="Core\ParserMotor.cs" />
     <Compile Include="Core\Parser.cs" />
