Added CSV Change Encoding utility

--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -31,4 +31,8 @@
       </setting>
     </ExcelCombinator.Properties.Settings>
   </userSettings>
+  <system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
 </configuration>
