--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 4.6.x
+          dotnet-version: 4.6.1
 
       - run: dotnet restore ${{ env.PROJECT_PATH }}
 
