--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -5,34 +5,27 @@ on:
     branches: [ "master" ]
 
 env:
-  PROJECT_PATH: WpfApp1/ExcelCombinator.csproj
-
+  SOLUTION_FILE: ExcelCombinator.sln
+  RELEASE_FOLDER: WpfApp1\bin\Release
+  MSBUILD: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe
+  
 jobs:
-  deploy:
+  compile:
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Git Project
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.x
+      - name: Compile Solution
+        run: '"%MSBUILD%" {{ env.SOLUTION_FILE }} /p:Configuration=Release'
 
-      - run: dotnet restore ${{ env.PROJECT_PATH }}
-
-      - run: dotnet build ${{ env.PROJECT_PATH }} -c Release
-
-      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
-
-      - uses: actions/create-release@v1
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-
-      - uses: csexton/release-asset-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          pattern: ExcelCombinator/bin/Release/netcoreapp3.1/win-x64/publish/*.exe
-          release-url: ${{ steps.create_release.outputs.upload_url }}
+      - name: Remove pdb and xml files
+        run: |
+          rm .\{{ env.RELEASE_FOLDER }}\*.pdb
+          rm .\{{ env.RELEASE_FOLDER }}\*.xml
+          
+      - name: Publish artifact
+        uses: actions/upload-artifact@v2
+        with: 
+          name: assets-for-download
+          path: {{ env.RELEASE_FOLDER }}
