--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: assets-for-download
-          path: {{ env.RELEASE_FOLDER }}
+          path: "{{ env.RELEASE_FOLDER }}"
