--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,8 +19,9 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Restore nuget packages
-        shell: cmd
-        run: '"%MSBUILD_PATH%\MSBuild.exe" ${{ env.SOLUTION_FILE }} -t:restore'
+        uses: nuget/setup-nuget@v1
+
+      - run: nuget restore ${{ env.SOLUTION_FILE }}
 
       - name: Compile Solution
         shell: cmd
