--- a/ExcelCombinator/packages.config
+++ b/ExcelCombinator/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autoupdater.NET.Official" version="1.7.6" targetFramework="net461" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1418.22" targetFramework="net461" />
 </packages>
