--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -23,6 +23,15 @@ jobs:
         
       - name: Checkout Git Project
         uses: actions/checkout@v3
+
+        
+      - name: Updating updater xml Version
+        id: update-xml-version
+        uses: rvolo/xml-replace-action@v0.2
+        with:
+          filepath: "updater.xml"
+          xpath: "//item/version"
+          replace: ${{ steps.version.outputs.version }}
         
       - name: Use Nuget
         uses: nuget/setup-nuget@v1
@@ -50,7 +59,7 @@ jobs:
         run: Compress-Archive -Path .\${{ env.RELEASE_FOLDER }}\* -DestinationPath ExcelCombinator_${{ steps.version.dateversion }}.zip
 
       - name: Updating updater xml Version
-        id: updater-xml-version
+        id: update-xml-version
         uses: rvolo/xml-replace-action@v0.2
         with:
           filepath: "updater.xml"
