change duplicated name

--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Checkout Git Project
         uses: actions/checkout@v3
 
-        
       - name: Updating updater xml Version
-        id: update-xml-version
+        id: update-xml-test
         uses: rvolo/xml-replace-action@v0.2
         with:
           filepath: "updater.xml"
