use 4 digits year for version mayor

--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Generate version number
         id: version
         run: |
-          "dateversion=$(date +'%y-%m-%d-%H%M')" >> $env:GITHUB_OUTPUT
-          "version=$(date +'%y.%m.%d.%H%M')" >> $env:GITHUB_OUTPUT
+          "dateversion=$(date +'%Y-%m-%d-%H%M')" >> $env:GITHUB_OUTPUT
+          "version=$(date +'%Y.%m.%d.%H%M')" >> $env:GITHUB_OUTPUT
 
       - name: Generating name for release
         id: release_name
@@ -57,12 +57,6 @@ jobs:
           Compress-Archive -Path .\${{ env.RELEASE_FOLDER }}\* -DestinationPath ${{ steps.release_name.outputs.release_name }}.zip
           "zip_file=${{ steps.release_name.outputs.release_name }}.zip" >> $env:GITHUB_OUTPUT
 
-      - name: Build Changelog
-        id: github_release
-        uses: mikepenz/release-changelog-builder-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Generate Release
         id: create_release
         uses: softprops/action-gh-release@v1
@@ -72,7 +66,7 @@ jobs:
           draft: false
           prerelease: false
           name: 'Release ${{ steps.version.outputs.dateversion }}'
-          body: ${{steps.github_release.outputs.changelog}}
+          generate_release_notes: true
 
       - name: Url to release
         id: release_url
