--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -70,11 +70,10 @@ jobs:
 
       - name: Url to release
         id: release_url
-        uses: mad9000/actions-find-and-replace-string@2
-        with:
-          source: ${{ steps.create_release.outputs.url }}
-          find: '/tag/'
-          replace: '/download/'
+        run: |
+          $url = "${{ steps.create_release.outputs.url }}" -replace "/tag/", "/download/"
+          echo "url=$url" >> $env:GITHUB_ENV
+          echo "Url: $url"
 
       - name: Updating updater xml Version
         id: update-xml-version
@@ -90,7 +89,7 @@ jobs:
         with:
           filepath: 'update.xml'
           xpath: '//item/url'
-          replace: '${{ steps.release_url.outputs.value }}/${{ steps.zip_release.outputs.zip_file }}'
+          replace: '${{ steps.release_url.outputs.url }}/${{ steps.zip_release.outputs.zip_file }}'
 
       - name: Commit and push changes
         run: |
