--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -18,8 +18,12 @@ jobs:
       - name: Generate version number
         id: version
         run: |
-          "dateversion=$(date +'%Y-%m-%d-%H%M')" >> $env:GITHUB_OUTPUT
-          "version=$(date +'%Y.%m.%d.%H%M')" >> $env:GITHUB_OUTPUT
+          $version = (Get-Date -Format "yy.MM.dd.HHmm")
+          $dashVersion = $version -replace '\.', '-'
+          "dateversion=$dashVersion" >> $env:GITHUB_OUTPUT
+          "version=$version >> $env:GITHUB_OUTPUT
+          echo version = $version
+          echo dashVersion = $dashVersion
 
       - name: Generating name for release
         id: release_name
