replace echo output

--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -22,8 +22,8 @@ jobs:
           $dashVersion = $version -replace '\.', '-'
           "dateversion=$dashVersion" >> $env:GITHUB_OUTPUT
           "version=$version" >> $env:GITHUB_OUTPUT
-          echo version = $version
-          echo dashVersion = $dashVersion
+          echo "version: $version"
+          echo "dashVersion: $dashVersion"
 
       - name: Generating name for release
         id: release_name
